--- a/product-preview-card/index.html
+++ b/product-preview-card/index.html
@@ -49,58 +49,51 @@
       }
     </script>
   </head>
-  <body>
-    <div class="flex flex-col bg-cream justify-center items-center h-screen">
-      <div class="flex w-[38rem] h-[28rem] rounded overflow-hidden shadow-lg">
-        <div class="w-1/2 h-full">
-          <img class="w-full h-full" src="./images/image-product-desktop.jpg" />
-        </div>
-        <div class="flex flex-col justify-between bg-white w-1/2 h-full p-8">
-          <p class="text-aurometal-saurus font-medium text-sm tracking-[5px]">
-            PERFUME
-          </p>
-          <h1 class="font-fraunces text-3xl font-bold leading-8">
-            Gabrielle Essence Eau
-            <br />
-            De Parfum
-          </h1>
-          <p class="text-aurometal-saurus text-sm leading-6">
-            A floral, solar and voluptuous interpretation composed by Olivier
-            Polge, Perfumer-Creator for the House of CHANEL.
-          </p>
-          <div class="flex flex-row justify-start items-center">
-            <h1
-              class="font-fraunces text-3xl font-bold leading-8 text-deep-aquamarine mr-5"
-            >
-              $149.99
-            </h1>
-            <p class="text-aurometal-saurus text-sm line-through">$169.99</p>
-          </div>
-          <button
-            class="bg-deep-aquamarine hover:bg-deep-aquamarine-h text-white font-bold h-12 rounded"
-          >
-            <div class="flex flex-row justify-center items-center">
-              <img class="h-4 w-4 mr-3" src="./images/icon-cart.svg" />
-              <p class="text-sm font-bold">
-                Add to Cart
-              </p>
-            </div>
-          </button>
-        </div>
+  <body class="flex justify-center items-center bg-cream h-screen">
+    <div
+      class="flex flex-col md:flex-row bg-white w-[21rem] md:w-[38rem] h-[38rem] md:h-[28rem] rounded-lg shadow-lg"
+    >
+      <div class="w-full md:w-1/2 h-60 md:h-full">
+        <img
+          class="rounded-t-lg md:hidden"
+          src="./images/image-product-mobile.jpg"
+        />
+        <img
+          class="w-full h-full rounded-l-lg hidden md:block"
+          src="./images/image-product-desktop.jpg"
+        />
       </div>
-      <div class="attribution">
-        Challenge by
-        <a
-          href="https://www.frontendmentor.io/challenges/product-preview-card-component-GO7UmttRfa"
-          target="_blank"
+      <div
+        class="flex flex-col justify-between w-full md:w-1/2 h-96 md:h-full p-8"
+      >
+        <p class="text-aurometal-saurus font-medium text-sm tracking-[5px]">
+          PERFUME
+        </p>
+        <h1 class="font-fraunces text-3xl font-bold leading-8">
+          Gabrielle Essence Eau De Parfum
+        </h1>
+        <p class="text-aurometal-saurus text-sm leading-6">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+        <div class="flex flex-row justify-start items-center">
+          <h1
+            class="font-fraunces text-3xl font-bold leading-8 text-deep-aquamarine mr-5"
+          >
+            $149.99
+          </h1>
+          <p class="text-aurometal-saurus text-sm line-through">$169.99</p>
+        </div>
+        <button
+          class="bg-deep-aquamarine hover:bg-deep-aquamarine-h text-white font-bold h-12 rounded-lg"
         >
-          Frontend Mentor
-        </a>
-        . Coded by
-        <a href="https://github.com/naresh-sabapathy92" target="_blank">
-          Resh Brown
-        </a>
-        .
+          <div class="flex flex-row justify-center items-center">
+            <img class="h-4 w-4 mr-3" src="./images/icon-cart.svg" />
+            <p class="text-sm font-bold">
+              Add to Cart
+            </p>
+          </div>
+        </button>
       </div>
     </div>
   </body>
