--- a/product-preview-card/index.html
+++ b/product-preview-card/index.html
@@ -49,7 +49,7 @@
       }
     </script>
   </head>
-  <body class="flex justify-center items-center bg-cream h-screen">
+  <body class="flex flex-col justify-center items-center bg-cream h-screen">
     <div
       class="flex flex-col md:flex-row bg-white w-[21rem] md:w-[38rem] h-[38rem] md:h-[28rem] rounded-lg shadow-lg"
     >
@@ -96,5 +96,20 @@
         </button>
       </div>
     </div>
+    <div class="attribution">
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io/challenges/product-preview-card-component-GO7UmttRfa"
+        target="_blank"
+      >
+        Frontend Mentor
+      </a>
+      . Coded by
+      <a href="https://github.com/naresh-sabapathy92" target="_blank">
+        Resh Brown
+      </a>
+      .
+    </div>
+  </div>
   </body>
 </html>
