--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     <button>
       <a href="./product-preview-card/index.html">Product Preview Card</a>
     </button>
+    <button>
+      <a href="./skilled-elearning-landing-page/index.html">
+        Skilled E-Learning Landing Page
+      </a>
+    </button>
   </body>
 </html>
