--- a/skilled-elearning-landing-page/index.html
+++ b/skilled-elearning-landing-page/index.html
@@ -11,11 +11,7 @@
       href="./assets/favicon-32x32.png"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Plus Jakarta Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <title>Frontend Mentor | Product preview card component</title>
@@ -34,15 +30,18 @@
         theme: {
           extend: {
             colors: {
-              cream: '#F2EAE2',
-              gunmetal: '#1C232B',
-              'aurometal-saurus': '#6C7289',
-              'deep-aquamarine': '#3D8168',
-              'deep-aquamarine-h': '#1A4032',
+              'dark-blue-gray': '#666CA3',
+              'yankees-blue': '#13183F',
+              'roman-silver': '#83869A',
+              'sasquatch-socks': '#F74780',
+              'carnation-pink': '#FFA7C3',
+              'persian-rose': '#F02AA6',
+              'alice-blue': '#F0F1FF',
+              'ultramarine-blue': '#4851FF',
+              persimmon: '#FF6F48',
             },
             fontFamily: {
-              sans: ['Montserrat'],
-              fraunces: ['Fraunces'],
+              sans: ['Plus Jakarta Sans'],
             },
           },
         },
@@ -50,6 +49,117 @@
     </script>
   </head>
   <body>
+    <div class="p-4">
+      <div class="flex justify-between items-center mb-9">
+        <p class="text-3xl font-extrabold text-yankees-blue">skilled</p>
+        <button
+          class="w-36 h-12 bg-yankees-blue rounded-full text-white font-bold"
+        >
+          Get Started
+        </button>
+      </div>
+      <h1 class="text-4xl font-extrabold text-yankees-blue mb-7">
+        Maximize skill, minimize budget
+      </h1>
+      <p class="text-roman-silver mb-6">
+        Our modern courses across a range of in-demand skills will give you the
+        knowledge you need to live the life you want.
+      </p>
+      <button
+        class="w-36 h-12 bg-gradient-to-t from-persian-rose to-persimmon rounded-full text-white font-bold"
+      >
+        Get Started
+      </button>
+      <img src="./assets/image-hero-mobile.png" />
+    </div>
+    <div
+      class="grid grid-cols-1 gap-4 p-4 bg-gradient-to-t from-alice-blue to-white"
+    >
+      <div>
+        <button
+          class="w-full h-32 bg-gradient-to-t from-persian-rose to-persimmon rounded-lg text-white font-bold text-2xl text-left px-3"
+        >
+          Check out our most popular courses!
+        </button>
+      </div>
+      <div class="grid grid-col-1 gap-6 bg-white p-3 rounded-lg shadow-sm">
+        <img class="w-14 h-14" src="./assets/icon-animation.svg" />
+        <h1 class="text-2xl font-extrabold">Animation</h1>
+        <p class="text-roman-silver text-justify">
+          Learn the latest animation techniques to create stunning motion design
+          and captivate your audience.
+        </p>
+        <h1
+          class="text-lg font-bold text-transparent bg-clip-text bg-gradient-to-t from-persian-rose to-persimmon"
+        >
+          Get Started
+        </h1>
+      </div>
+      <div class="grid grid-col-1 gap-6 bg-white p-3 rounded-lg shadow-sm">
+        <img class="w-14 h-14" src="./assets/icon-design.svg" />
+        <h1 class="text-2xl font-extrabold">Design</h1>
+        <p class="text-roman-silver text-justify">
+          Create beautiful, usable interfaces to help shape the future of how
+          the web looks.
+        </p>
+        <h1
+          class="text-lg font-bold text-transparent bg-clip-text bg-gradient-to-t from-persian-rose to-persimmon"
+        >
+          Get Started
+        </h1>
+      </div>
+      <div class="grid grid-col-1 gap-6 bg-white p-3 rounded-lg shadow-sm">
+        <img class="w-14 h-14" src="./assets/icon-photography.svg" />
+        <h1 class="text-2xl font-extrabold">Photography</h1>
+        <p class="text-roman-silver text-justify">
+          Explore critical fundamentals like lighting, composition, and focus to
+          capture exceptional photos.
+        </p>
+        <h1
+          class="text-lg font-bold text-transparent bg-clip-text bg-gradient-to-t from-persian-rose to-persimmon"
+        >
+          Get Started
+        </h1>
+      </div>
+      <div class="grid grid-col-1 gap-6 bg-white p-3 rounded-lg shadow-sm">
+        <img class="w-14 h-14" src="./assets/icon-crypto.svg" />
+        <h1 class="text-2xl font-extrabold">Crypto</h1>
+        <p class="text-roman-silver text-justify">
+          All you need to know to get started investing in crypto. Go from
+          beginner to advanced with this 54 hour course.
+        </p>
+        <h1
+          class="text-lg font-bold text-transparent bg-clip-text bg-gradient-to-t from-persian-rose to-persimmon"
+        >
+          Get Started
+        </h1>
+      </div>
+      <div
+        class="grid grid-col-1 gap-6 bg-white p-3 mb-20 rounded-lg shadow-sm"
+      >
+        <img class="w-14 h-14" src="./assets/icon-animation.svg" />
+        <h1 class="text-2xl font-extrabold">Business</h1>
+        <p class="text-roman-silver text-justify">
+          A step-by-step playbook to help you start, scale, and sustain your
+          business without outside investment.
+        </p>
+        <h1
+          class="text-lg font-bold text-transparent bg-clip-text bg-gradient-to-t from-persian-rose to-persimmon"
+        >
+          Get Started
+        </h1>
+      </div>
+    </div>
+    <div
+      class="flex items-center justify-between bg-yankees-blue h-[8rem] px-4"
+    >
+      <h1 class="text-white text-3xl font-extrabold">skilled</h1>
+      <button
+        class="w-36 h-12 bg-gradient-to-t from-persian-rose to-ultramarine-blue rounded-full text-white font-bold"
+      >
+        Get Started
+      </button>
+    </div>
     <div class="attribution">
       Challenge by
       <a
@@ -64,6 +174,5 @@
       </a>
       .
     </div>
-  </div>
   </body>
 </html>
