--- a/skilled-elearning-landing-page/index.html
+++ b/skilled-elearning-landing-page/index.html
@@ -49,7 +49,7 @@
     </script>
   </head>
   <body>
-    <div class="p-4">
+    <div class="p-4 md:pt-6 md:px-10 md:mb-20">
       <div class="flex justify-between items-center mb-9">
         <p class="text-3xl font-extrabold text-yankees-blue">skilled</p>
         <button
@@ -58,32 +58,47 @@
           Get Started
         </button>
       </div>
-      <h1 class="text-4xl font-extrabold text-yankees-blue mb-7">
-        Maximize skill, minimize budget
-      </h1>
-      <p class="text-roman-silver mb-6">
-        Our modern courses across a range of in-demand skills will give you the
-        knowledge you need to live the life you want.
-      </p>
-      <button
-        class="w-36 h-12 bg-gradient-to-t from-persian-rose to-persimmon rounded-full text-white font-bold"
-      >
-        Get Started
-      </button>
-      <img src="./assets/image-hero-mobile.png" />
+      <div class="flex flex-col md:flex-row items-center md:h-96">
+        <div class="md:w-7/12">
+          <h1 class="text-4xl font-extrabold text-yankees-blue mb-7">
+            Maximize skill, minimize budget
+          </h1>
+          <p class="text-roman-silver mb-6">
+            Our modern courses across a range of in-demand skills will give you
+            the knowledge you need to live the life you want.
+          </p>
+          <button
+            class="w-36 h-12 bg-gradient-to-t from-persian-rose to-persimmon rounded-full text-white font-bold"
+          >
+            Get Started
+          </button>
+        </div>
+        <img class="md:hidden" src="./assets/image-hero-mobile.png" />
+        <div
+          class="hidden md:block relative h-[40rem] w-[40rem] overflow-hidden m-[-2.5rem]"
+        >
+          <img
+            class="absolute top-[-3rem] left-[7rem] h-full w-full object-cover object-left"
+            src="./assets/image-hero-tablet.png"
+          />
+        </div>
+      </div>
     </div>
     <div
-      class="grid grid-cols-1 gap-4 p-4 bg-gradient-to-t from-alice-blue to-white"
+      class="grid grid-cols-1 md:grid-cols-2 gap-10 md:gap-y-12 md:gap-x-3 p-4 md:px-10 bg-gradient-to-t from-alice-blue to-white"
     >
-      <div>
-        <button
-          class="w-full h-32 bg-gradient-to-t from-persian-rose to-persimmon rounded-lg text-white font-bold text-2xl text-left px-3"
-        >
-          Check out our most popular courses!
-        </button>
+      <div
+        class="flex items-center md:items-start w-full h-32 md:h-full bg-gradient-to-t from-persian-rose to-persimmon rounded-lg text-white font-bold text-2xl text-left px-7 md:px-8 md:py-14"
+      >
+        Check out our most popular courses!
       </div>
-      <div class="grid grid-col-1 gap-6 bg-white p-3 rounded-lg shadow-sm">
-        <img class="w-14 h-14" src="./assets/icon-animation.svg" />
+      <div
+        class="relative grid grid-col-1 gap-6 bg-white px-7 pt-14 pb-8 rounded-lg shadow-sm"
+      >
+        <img
+          class="absolute top-[-24px] left-7 w-14 h-14"
+          src="./assets/icon-animation.svg"
+        />
         <h1 class="text-2xl font-extrabold">Animation</h1>
         <p class="text-roman-silver text-justify">
           Learn the latest animation techniques to create stunning motion design
@@ -95,8 +110,13 @@
           Get Started
         </h1>
       </div>
-      <div class="grid grid-col-1 gap-6 bg-white p-3 rounded-lg shadow-sm">
-        <img class="w-14 h-14" src="./assets/icon-design.svg" />
+      <div
+        class="relative grid grid-col-1 gap-6 bg-white px-7 pt-14 pb-8 rounded-lg shadow-sm"
+      >
+        <img
+          class="absolute top-[-24px] left-7 w-14 h-14"
+          src="./assets/icon-design.svg"
+        />
         <h1 class="text-2xl font-extrabold">Design</h1>
         <p class="text-roman-silver text-justify">
           Create beautiful, usable interfaces to help shape the future of how
@@ -108,8 +128,13 @@
           Get Started
         </h1>
       </div>
-      <div class="grid grid-col-1 gap-6 bg-white p-3 rounded-lg shadow-sm">
-        <img class="w-14 h-14" src="./assets/icon-photography.svg" />
+      <div
+        class="relative grid grid-col-1 gap-6 bg-white px-7 pt-14 pb-8 rounded-lg shadow-sm"
+      >
+        <img
+          class="absolute top-[-24px] left-7 w-14 h-14"
+          src="./assets/icon-photography.svg"
+        />
         <h1 class="text-2xl font-extrabold">Photography</h1>
         <p class="text-roman-silver text-justify">
           Explore critical fundamentals like lighting, composition, and focus to
@@ -121,8 +146,13 @@
           Get Started
         </h1>
       </div>
-      <div class="grid grid-col-1 gap-6 bg-white p-3 rounded-lg shadow-sm">
-        <img class="w-14 h-14" src="./assets/icon-crypto.svg" />
+      <div
+        class="relative grid grid-col-1 gap-6 bg-white px-7 pt-14 pb-8 md:mb-20 rounded-lg shadow-sm"
+      >
+        <img
+          class="absolute top-[-24px] left-7 w-14 h-14"
+          src="./assets/icon-crypto.svg"
+        />
         <h1 class="text-2xl font-extrabold">Crypto</h1>
         <p class="text-roman-silver text-justify">
           All you need to know to get started investing in crypto. Go from
@@ -135,9 +165,12 @@
         </h1>
       </div>
       <div
-        class="grid grid-col-1 gap-6 bg-white p-3 mb-20 rounded-lg shadow-sm"
+        class="relative grid grid-col-1 gap-6 bg-white px-7 pt-14 pb-8 mb-20 rounded-lg shadow-sm"
       >
-        <img class="w-14 h-14" src="./assets/icon-animation.svg" />
+        <img
+          class="absolute top-[-24px] left-7 w-14 h-14"
+          src="./assets/icon-animation.svg"
+        />
         <h1 class="text-2xl font-extrabold">Business</h1>
         <p class="text-roman-silver text-justify">
           A step-by-step playbook to help you start, scale, and sustain your
