--- a/skilled-elearning-landing-page/index.html
+++ b/skilled-elearning-landing-page/index.html
@@ -49,43 +49,53 @@
     </script>
   </head>
   <body>
-    <div class="p-4 md:pt-6 md:px-10 md:mb-20">
+    <div class="p-4 md:pt-6 md:px-10 lg:px-40 md:mb-20">
       <div class="flex justify-between items-center mb-9">
         <p class="text-3xl font-extrabold text-yankees-blue">skilled</p>
         <button
-          class="w-36 h-12 bg-yankees-blue rounded-full text-white font-bold"
+          class="w-36 h-12 bg-yankees-blue hover:bg-dark-blue-gray rounded-full text-white font-bold lg:z-10"
         >
           Get Started
         </button>
       </div>
-      <div class="flex flex-col md:flex-row items-center md:h-96">
-        <div class="md:w-7/12">
-          <h1 class="text-4xl font-extrabold text-yankees-blue mb-7">
+      <div class="flex flex-col md:flex-row items-center md:h-96 lg:h-[42rem]">
+        <div class="md:w-7/12 lg:w-[28rem]">
+          <h1
+            class="text-4xl lg:text-5xl font-extrabold text-yankees-blue mb-7"
+          >
             Maximize skill, minimize budget
           </h1>
-          <p class="text-roman-silver mb-6">
+          <p class="lg:text-lg text-roman-silver mb-6">
             Our modern courses across a range of in-demand skills will give you
             the knowledge you need to live the life you want.
           </p>
           <button
-            class="w-36 h-12 bg-gradient-to-t from-persian-rose to-persimmon rounded-full text-white font-bold"
+            class="w-36 h-12 bg-gradient-to-t from-persian-rose to-persimmon hover:opacity-50 rounded-full text-white font-bold"
           >
             Get Started
           </button>
         </div>
         <img class="md:hidden" src="./assets/image-hero-mobile.png" />
         <div
-          class="hidden md:block relative h-[40rem] w-[40rem] overflow-hidden m-[-2.5rem]"
+          class="hidden md:block lg:hidden relative h-[40rem] w-[40rem] overflow-hidden mr-[-2.5rem]"
         >
           <img
             class="absolute top-[-3rem] left-[7rem] h-full w-full object-cover object-left"
             src="./assets/image-hero-tablet.png"
           />
         </div>
+        <div
+          class="hidden lg:block relative h-[58rem] w-[82rem] overflow-hidden mr-[-10rem]"
+        >
+          <img
+            class="absolute top-[-8rem] left-[18rem] h-full w-full object-cover object-left"
+            src="./assets/image-hero-desktop.png"
+          />
+        </div>
       </div>
     </div>
     <div
-      class="grid grid-cols-1 md:grid-cols-2 gap-10 md:gap-y-12 md:gap-x-3 p-4 md:px-10 bg-gradient-to-t from-alice-blue to-white"
+      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 md:gap-y-12 md:gap-x-3 lg:gap-x-8 p-4 md:px-10 lg:px-40 bg-gradient-to-t from-alice-blue to-white"
     >
       <div
         class="flex items-center md:items-start w-full h-32 md:h-full bg-gradient-to-t from-persian-rose to-persimmon rounded-lg text-white font-bold text-2xl text-left px-7 md:px-8 md:py-14"
@@ -129,7 +139,7 @@
         </h1>
       </div>
       <div
-        class="relative grid grid-col-1 gap-6 bg-white px-7 pt-14 pb-8 rounded-lg shadow-sm"
+        class="relative grid grid-col-1 gap-6 bg-white px-7 pt-14 pb-8 lg:mb-20 rounded-lg shadow-sm"
       >
         <img
           class="absolute top-[-24px] left-7 w-14 h-14"
@@ -184,11 +194,11 @@
       </div>
     </div>
     <div
-      class="flex items-center justify-between bg-yankees-blue h-[8rem] px-4"
+      class="flex items-center justify-between bg-yankees-blue h-[8rem] px-4 md:px-10 lg:px-40"
     >
       <h1 class="text-white text-3xl font-extrabold">skilled</h1>
       <button
-        class="w-36 h-12 bg-gradient-to-t from-persian-rose to-ultramarine-blue rounded-full text-white font-bold"
+        class="w-36 h-12 bg-gradient-to-t from-persian-rose to-ultramarine-blue hover:opacity-50 rounded-full text-white font-bold"
       >
         Get Started
       </button>
