--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
         Skilled E-Learning Landing Page
       </a>
     </button>
+    <button>
+      <a href="./interactive-rating-component/index.html">
+        Interactive Rating Component
+      </a>
+    </button>
   </body>
 </html>
