--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -11,16 +11,13 @@
       href="./images/favicon-32x32.png"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <title>Frontend Mentor | Product preview card component</title>
     <style>
       .attribution {
+        color: 'white';
         font-size: 11px;
         text-align: center;
       }
@@ -34,23 +31,62 @@
         theme: {
           extend: {
             colors: {
-              cream: '#F2EAE2',
-              gunmetal: '#1C232B',
-              'aurometal-saurus': '#6C7289',
-              'deep-aquamarine': '#3D8168',
-              'deep-aquamarine-h': '#1A4032',
+              'dark-blue': '#262E38',
+              'very-dark-blue': '#131518',
+              orange: '#FC7614',
+              'medium-gray': '#7C8798',
+              'light-gray': '#969FAD',
+              'charleston-green': '#232A34',
+              'jungle-green': '#181E27',
             },
             fontFamily: {
-              sans: ['Montserrat'],
-              fraunces: ['Fraunces'],
+              sans: ['Overpass'],
+            },
+            backgroundImage: {
+              'gradient-radial': 'radial-gradient(var(--tw-gradient-stops))',
             },
           },
         },
       }
     </script>
   </head>
-  <body>
-    <div class="attribution">
+  <body
+    class="bg-very-dark-blue flex flex-col justify-center items-center h-screen w-screen"
+  >
+    <div
+      class="bg-gradient-radial from-charleston-green to-jungle-green w-80 h-96 rounded-2xl px-6 pt-6 pb-8 grid"
+    >
+      <div
+        class="flex justify-center items-center bg-dark-blue w-10 h-10 rounded-full"
+      >
+        <img src="./images/icon-star.svg" alt="star" />
+      </div>
+      <h1 class="text-2xl font-bold text-white">How did we do?</h1>
+      <p class="text-sm text-light-gray tracking-tight">
+        Please let us know how we did with your support request. All feedback is
+        appreciated to help us improve our offering!
+      </p>
+      <div class="flex justify-between">
+        <button class="bg-dark-blue rounded-full w-10 h-10 text-medium-gray">
+          1
+        </button>
+        <button class="bg-dark-blue rounded-full w-10 h-10 text-medium-gray">
+          2
+        </button>
+        <button class="bg-dark-blue rounded-full w-10 h-10 text-medium-gray">
+          3
+        </button>
+        <button class="bg-dark-blue rounded-full w-10 h-10 text-medium-gray">
+          4
+        </button>
+        <button class="bg-dark-blue rounded-full w-10 h-10 text-medium-gray">
+          5
+        </button>
+      </div>
+      <!-- submit -->
+      <button class="bg-orange rounded-full text-white">SUBMIT</button>
+    </div>
+    <div class="text-xs text-white">
       Challenge by
       <a
         href="https://www.frontendmentor.io/challenges/product-preview-card-component-GO7UmttRfa"
@@ -64,6 +100,5 @@
       </a>
       .
     </div>
-  </div>
   </body>
 </html>
