--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
     <link
       rel="icon"
       type="image/png"
@@ -33,11 +32,11 @@
             colors: {
               'dark-blue': '#262E38',
               'very-dark-blue': '#131518',
-              orange: '#FC7614',
               'medium-gray': '#7C8798',
               'light-gray': '#969FAD',
               'charleston-green': '#232A34',
               'jungle-green': '#181E27',
+              orange: '#FC7614',
             },
             fontFamily: {
               sans: ['Overpass'],
@@ -54,6 +53,7 @@
     class="bg-very-dark-blue flex flex-col justify-center items-center h-screen w-screen"
   >
     <div
+      id="form"
       class="bg-gradient-radial from-charleston-green to-jungle-green w-80 h-96 rounded-2xl px-6 pt-6 pb-8 grid"
     >
       <div
@@ -67,24 +67,37 @@
         appreciated to help us improve our offering!
       </p>
       <div class="flex justify-between">
-        <button class="bg-dark-blue rounded-full w-10 h-10 text-medium-gray">
+        <span
+          class="flex justify-center items-center bg-dark-blue hover:bg-light-gray rounded-full w-10 h-10 text-medium-gray hover:text-white"
+        >
           1
-        </button>
-        <button class="bg-dark-blue rounded-full w-10 h-10 text-medium-gray">
+        </span>
+        <span
+          class="flex justify-center items-center bg-dark-blue hover:bg-light-gray rounded-full w-10 h-10 text-medium-gray hover:text-white"
+        >
           2
-        </button>
-        <button class="bg-dark-blue rounded-full w-10 h-10 text-medium-gray">
+        </span>
+        <span
+          class="flex justify-center items-center bg-dark-blue hover:bg-light-gray rounded-full w-10 h-10 text-medium-gray hover:text-white"
+        >
           3
-        </button>
-        <button class="bg-dark-blue rounded-full w-10 h-10 text-medium-gray">
+        </span>
+        <span
+          class="flex justify-center items-center bg-dark-blue hover:bg-light-gray rounded-full w-10 h-10 text-medium-gray hover:text-white"
+        >
           4
-        </button>
-        <button class="bg-dark-blue rounded-full w-10 h-10 text-medium-gray">
+        </span>
+        <span
+          class="flex justify-center items-center bg-dark-blue hover:bg-light-gray rounded-full w-10 h-10 text-medium-gray hover:text-white"
+        >
           5
-        </button>
+        </span>
       </div>
-      <!-- submit -->
-      <button class="bg-orange rounded-full text-white">SUBMIT</button>
+      <button
+        class="bg-orange hover:bg-white rounded-full text-white hover:text-orange"
+      >
+        SUBMIT
+      </button>
     </div>
     <div class="text-xs text-white">
       Challenge by
@@ -100,5 +113,6 @@
       </a>
       .
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
