--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
         Interactive Rating Component
       </a>
     </button>
+    <button>
+      <a href="./qr-code-component/index.html">
+        QR Code Component
+      </a>
+    </button>
   </body>
 </html>
