--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
         QR Code Component
       </a>
     </button>
+    <button>
+      <a href="./equalizer-landing-page/index.html">
+        Equalizer Landing Page
+      </a>
+    </button>
   </body>
 </html>
